// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SparklineChart should render component 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr0-c0)"
    >
      <path
        d="M0 240C0 240 0 210 0 180C0 150 0 150 0 120C0 90 0 90 0 60C0 30 0 0 0 0L0 300Z"
        fill="url(#zr0-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 240C0 240 0 210 0 180C0 150 0 150 0 120C0 90 0 90 0 60C0 30 0 0 0 0"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
        stroke-width="2"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr0-c0"
    >
      <path
        d="M-1 -1l0 0l0 302l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr0-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`SparklineChart should render component with trendLine having green 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr2-c0)"
    >
      <path
        d="M0 250C0 250 0 225 0 200C0 175 0 175 0 150C0 125 0 125 0 100C0 75 0 75 0 50C0 25 0 0 0 0L0 300Z"
        fill="url(#zr2-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 250C0 250 0 225 0 200C0 175 0 175 0 150C0 125 0 125 0 100C0 75 0 75 0 50C0 25 0 0 0 0"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
        stroke-width="2"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr2-c0"
    >
      <path
        d="M-1 -1l0 0l0 302l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr2-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`SparklineChart should render component with trendLine having red 1`] = `
<svg
  baseProfile="full"
  height="300"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="300"
    id="0"
    width="0"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr1-c0)"
    >
      <path
        d="M0 240C0 240 0 210 0 180C0 150 0 150 0 120C0 90 0 90 0 60C0 30 0 0 0 0C0 0 0 300 0 300Z"
        fill="url(#zr1-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M0 240C0 240 0 210 0 180C0 150 0 150 0 120C0 90 0 90 0 60C0 30 0 0 0 0C0 0 0 300 0 300"
        fill="none"
        stroke="#ED1C24"
        stroke-linejoin="bevel"
        stroke-width="2"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr1-c0"
    >
      <path
        d="M-1 -1l0 0l0 302l0 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr1-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#F4777C"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;
